--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "turbo": "^1.5.6"
+  },
+  "dependencies": {
+    "lodash-es": "^4.17.21"
   }
 }
