--- a/packages/web-editor/package.json
+++ b/packages/web-editor/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@web/tools": "workspace:^0.0.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6"
@@ -19,6 +20,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.12",
+    "less": "^4.1.3",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.6.4",
