--- a/packages/web-editor/package.json
+++ b/packages/web-editor/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@web/tools": "workspace:^0.0.0",
+    "antd": "^5.1.4",
     "classnames": "^2.3.2",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "6"
   },
