--- a/packages/web-editor/package.json
+++ b/packages/web-editor/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
     "@web/tools": "workspace:^0.0.0",
     "antd": "^5.1.4",
     "classnames": "^2.3.2",
