--- a/packages/web-editor/package.json
+++ b/packages/web-editor/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "6"
+    "react-router-dom": "6",
+    "zustand": "^4.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
